# auto_spec

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/module/: llm.py  make_xml.py
