[project]
name = "auto-spec-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.5",
    "llama-index>=0.14.7",
    "llama-index-embeddings-gemini>=0.4.1",
    "llama-index-llms-gemini>=0.6.1",
]
